[package]
name = "mq-open"
version = "0.1.2"
edition = "2024"
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Graphical previewer for mq"
repository = "https://github.com/harehare/mq-open"
readme = "README.md"
keywords = ["markdown", "jq", "query"]
license = "MIT"

[dependencies]
mq-lang = "0.5.23"
mq-markdown = "0.5.22"
eframe = { version = "0.33.0", features = ["persistence"] }
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
image = { version = "0.25" }
rfd = "0.17"
miette = "7.6.0"
clap = {version = "4.6.0", features = ["derive"] }
notify = "8.0.0"
itertools = "0.14.0"
smol_str = "0.3.6"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.8"

