[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Graphical previewer for mq"
edition = "2024"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-open"
readme = "README.md"
repository = "https://github.com/harehare/mq-open"
version = "0.1.4"

[dependencies]
clap = {version = "4.6.1", features = ["derive"]}
eframe = {version = "0.34.1", features = ["persistence"]}
egui_extras = {version = "0.33.3", features = ["all_loaders"]}
image = {version = "0.25"}
itertools = "0.14.0"
miette = "7.6.0"
mq-lang = "0.5.27"
mq-markdown = "0.5.27"
notify = "8.0.0"
rfd = "0.17"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
smol_str = "0.3.6"
url = "2.5.8"

